Update to OpenCore 0.7.6

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -147,7 +147,7 @@
 				<key>BundlePath</key>
 				<string>Lilu.kext</string>
 				<key>Comment</key>
-                    <string>V1.5.7 | Patch engine</string>
+                    <string>V1.5.8 | Patch engine</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -165,7 +165,7 @@
 				<key>BundlePath</key>
 				<string>VirtualSMC.kext</string>
 				<key>Comment</key>
-                    <string>V1.2.7 | SMC emulator</string>
+                    <string>V1.2.8 | SMC emulator</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -183,7 +183,7 @@
 				<key>BundlePath</key>
 				<string>SMCProcessor.kext</string>
 				<key>Comment</key>
-                    <string>V1.2.7</string>
+                    <string>V1.2.8</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -201,7 +201,7 @@
 				<key>BundlePath</key>
 				<string>SMCSuperIO.kext</string>
 				<key>Comment</key>
-                    <string>V1.2.7</string>
+                    <string>V1.2.8</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -237,7 +237,7 @@
 				<key>BundlePath</key>
 				<string>AppleALC.kext</string>
 				<key>Comment</key>
-                    <string>V1.6.6 | Audio patches</string>
+                    <string>V1.6.7 | Audio patches</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -546,8 +546,6 @@
 			<dict>
 				<key>DefaultBackgroundColor</key>
 				<data>AAAAAA==</data>
-				<key>UIScale</key>
-				<data>Ag==</data>
 			</dict>
 			<key>4D1FDA02-38C7-4A6A-9CC6-4BCCA8B30102</key>
 			<dict>
@@ -574,7 +572,6 @@
 		<dict>
 			<key>4D1EDE05-38C7-4A6A-9CC6-4BCCA8B38C14</key>
 			<array>
-				<string>UIScale</string>
 				<string>DefaultBackgroundColor</string>
 			</array>
 			<key>4D1FDA02-38C7-4A6A-9CC6-4BCCA8B30102</key>
@@ -761,6 +758,8 @@
 			<false/>
 			<key>ProvideConsoleGop</key>
 			<true/>
+                <key>ReconnectGraphicsOnConnect</key>
+                <false/>
 			<key>ReconnectOnResChange</key>
 			<false/>
 			<key>ReplaceTabWithSpace</key>
@@ -771,6 +770,8 @@
 			<false/>
 			<key>TextRenderer</key>
 			<string>BuiltinGraphics</string>
+                <key>UIScale</key>
+                <integer>2</integer>
 			<key>UgaPassThrough</key>
 			<false/>
 		</dict>
@@ -821,6 +822,8 @@
 			<false/>
 			<key>EnableVectorAcceleration</key>
 			<true/>
+                <key>EnableVmx</key>
+                <false/>
 			<key>ExitBootServicesDelay</key>
 			<integer>0</integer>
 			<key>ForceOcWriteFlash</key>
