--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -237,7 +237,7 @@
 				<key>BundlePath</key>
 				<string>AppleALC.kext</string>
 				<key>Comment</key>
-                <string>V1.7.0 | Audio patches</string>
+                    <string>V1.7.1 | Audio patches</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -382,6 +382,8 @@
 			<false/>
 			<key>AppleXcpmForceBoost</key>
 			<false/>
+                <key>CustomPciSerialDevice</key>
+                <false/>
 			<key>CustomSMBIOSGuid</key>
 			<false/>
 			<key>DisableIoMapper</key>
@@ -394,6 +396,8 @@
 			<false/>
 			<key>ExternalDiskIcons</key>
 			<false/>
+                <key>ForceAquantiaEthernet</key>
+                <false/>
 			<key>ForceSecureBootScheme</key>
 			<false/>
 			<key>IncreasePciBarSize</key>
@@ -474,8 +478,6 @@
 			<integer>0</integer>
             <key>LogModules</key>
             <string></string>
-			<key>SerialInit</key>
-			<false/>
 			<key>SysReport</key>
 			<false/>
 			<key>Target</key>
@@ -516,6 +518,13 @@
 			<key>Vault</key>
 			<string>Optional</string>
 		</dict>
+            <key>Serial</key>
+            <dict>
+                <key>Init</key>
+                <false/>
+                <key>Override</key>
+                <false/>
+            </dict>
 		<key>Tools</key>
 		<array>
 			<dict>
