--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -237,7 +237,7 @@
 				<key>BundlePath</key>
 				<string>AppleALC.kext</string>
 				<key>Comment</key>
-                    <string>V1.7.4 | Audio patches</string>
+                    <string>V1.7.5 | Audio patches</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
@@ -561,6 +561,8 @@
 				<true/>
 				<key>Flavour</key>
 				<string>Auto</string>
+                    <key>FullNvramAccess</key>
+                    <false/>
 				<key>Name</key>
 				<string>BIOS Settings</string>
 				<key>Path</key>
